--- a/ThermalLabelWebEditorSample/Content/ThermalLabelWebEditor.css
+++ b/ThermalLabelWebEditorSample/Content/ThermalLabelWebEditor.css
@@ -17,7 +17,7 @@
     --item-tooltip-color: #000;
     --item-tooltip-background-color: #f5f5f5;
     --item-tooltip-border-color: #808080;
-    --adorner-handler-background-color: #00ff00;
+    --adorner-handler-background-color: #00ffff;
     --adorner-frame-border-color: #000;
     --adorner-out-of-label-border-color: #ff0000;
 }
